{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "bf30b2d0-e368-4289-9715-bd2189432710",
            "actions": [
                {
                    "name": "Move_xy",
                    "type": "PassThrough",
                    "id": "562d4c87-407d-4e0d-8c99-5cddff0c5773",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move_z",
                    "type": "PassThrough",
                    "id": "08205ab5-9ee6-41f3-aa3d-d9118a748c42",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "69474bf9-c18a-4fca-b2ff-ba03a0aae517",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a6237b02-a86b-4f87-8339-a09051d62136",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_xy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95978b9c-f087-4722-b3b4-47536f2afbd9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_z",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "077c3480-32d9-4fdb-9ab1-e23955a7aa3b",
                    "path": "<DualShockGamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}